Ensure News footer is properly styled in dark mode

--- a/assets/email/email.scss
+++ b/assets/email/email.scss
@@ -195,7 +195,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #121212;
+    background-color: #101820;
     color: #f2f2f2;
   }
 
@@ -203,5 +203,13 @@ body {
     h1, h2, h3, h4 {
       color: #e2e2e2;
     }
+  }
+
+  .footer {
+    color: #e6e5e6;
+
+    a { color: #e6e5e6 }
+
+    @media (max-width: 700px) { background-color: #1A232C; }
   }
 }
